# codoxel2

./: .gitignore  CMakeLists.txt  README.md
development_resources/shaders/: shader.frag  shader.vert
scripts/: compile_shaders.ps1
src/: main.c
